clusters/proxmox-home/observability/victorialogs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vlogs-ingress
  namespace: victorialogs
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: victorialogs/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: vlogs-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vlogs.mgsds.com
    secretName: vlogs.mgsds.com-tls
  rules:
  - host: vlogs.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vlogs-victoria-logs-single-server
            port:
              number: 9428
